# Minix

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Editor/src/: main.cpp
Engine/include/: Camera.h  ComponentDraw.h  ComponentPhysics.h  ComponentPosition.h  Engine.h  EventPhysicsTouched.h  Gfx.h  InputRuntime.h  LuaAPI.h  LuaComponentBuilder.h  LuaRuntime.h  Messager.h  MinixRuntime.h  PhysicsRuntime.h  Registry.h  Registry.tpp  Runtime.h  SchedulerRuntime.h  Sfx.h  TypeAction.h  TypeComponent.h  TypeCoords.h  TypeEvent.h  TypeObject.h  TypeObject.tpp  World.h
Engine/src/: App.cpp  Camera.cpp  ComponentDraw.cpp  ComponentPhysics.cpp  ComponentPosition.cpp  Engine.cpp  EventPhysicsTouched.cpp  Gfx.cpp  InputRuntime.cpp  LuaAPI.cpp  LuaRuntime.cpp  Messager.cpp  MinixRuntime.cpp  PhysicsRuntime.cpp  Registry.cpp  Runtime.cpp  SchedulerRuntime.cpp  Sfx.cpp  World.cpp
Player/src/: main.cpp
Test/src/: main.cpp
